@@ -53,30 +53,38 @@
 	  (dims (cons (car initial-dims) (cdr initial-dims)))
 	  timer)
 
-      (define (clear)
-	(unless (zerop step)
-	  (erase-window-outline mode (car coords) (cdr coords)
-				(car dims) (cdr dims))))
-      
       (define (stop)
 	(delete-timer timer)
 	(record-window-animator w nil)
 	(ungrab-server))
 
+      (define (protect fun)
+	(call-with-exception-handler fun (lambda (ex)
+					   (stop)
+					   (raise-exception ex))))
+      
+      (define (clear)
+	(unless (zerop step)
+	  (protect (lambda ()
+		     (erase-window-outline mode (car coords) (cdr coords)
+					   (car dims) (cdr dims))))))
+
       (define (frame)
-	(clear)
-	(if (>= step anim-outline-steps)
-	    (stop)
-	  (rplaca coords (+ (car coords) x-step))
-	  (rplacd coords (+ (cdr coords) y-step))
-	  (rplaca dims (+ (car dims) w-step))
-	  (rplacd dims (+ (cdr dims) h-step))
-	  (draw-window-outline mode (car coords) (cdr coords)
-			       (car dims) (cdr dims))
-	  (setq step (1+ step))
-	  (set-timer timer)))
+	(protect (lambda ()
+		   (clear)
+		   (if (>= step anim-outline-steps)
+		       (stop)
+		     (rplaca coords (+ (car coords) x-step))
+		     (rplacd coords (+ (cdr coords) y-step))
+		     (rplaca dims (+ (car dims) w-step))
+		     (rplacd dims (+ (cdr dims) h-step))
+		     (draw-window-outline mode (car coords) (cdr coords)
+					  (car dims) (cdr dims))
+		     (setq step (1+ step))
+		     (set-timer timer)))))
 
       (define (animator win op)
+	(declare (unused win))
 	(when (eq op 'stop)
 	  (clear)
 	  (stop)))
